	semantics.  (Was avoiding on AIX by linking with -lbsd).  Also, block
	SIGINT in all but main thread to be compatible with Linux pthreads,
	which seems to deliver that signal to all threads that don't block it.

	pcp functionality added

	fixed DSHPATH
	
	added genders support

Release 1.3

	Activated POSIX mode for getopt() on linux.

	Abort cleanly if working collective is empty.

	Fixed bug in pcp option handling (core on empty source file list).

	Added install rule for pcp link to Makefiles.

	Added -d (debug) option to get verbose thread status on ^C,
	and connect/command time report at the end.

	Use gethostbyname_r() on linux, but need mutex anyway for RH6.2.

	Cleanup of rcmd selection code

	-c option taken out of usage message due to lack of interest,
	though still supported for SP dsh compatibility.  Took SP-isms
	i.e. "partitions" and "working collective" out of Usage message
	and other places.

	Removed Makefile.sol and Makefile.aix42 (added commented out LIBS
	defs to Makefile for solaris and aix42)

	Fix DSHPATH handling for csh users.

	Reword man entry for -l to note that even root needs to be in .rhosts
	file of remote user.

	Rework README.
	
	Added dshbak perl script and manpage.

	Added -S option to make pdsh return largest of remote return codes,
	or 254 if any of the rsh transactions fail.

	Added pcp man page.

	Added -e option and pipecmd.c to use ssh.

	Convert bcopy, index, rindex -> memcpy, strchr, strrchr.

	Verified working on the following platforms:
	- Linux 2.2.14-5.0 i686
	- Linux 2.2.14 #5 SMP alpha
	- Linux 2.2.14-5.0smp sparc
	- AIX 3 4
	- SunOS 5.7 sun4u sparc SUNW,Ultra-Enterprise
	- OSF1 V4.0 alpha

Release 1.4pre

	Added RPM spec file.

	Fixed bug with opt_list dumping core on linux.
	
	Added pdsh -V to display version (PDSH_VERSION in conf.h).

	Changed wcoll logic on SP so pdsh -aiv drops nodes which have
	either switch_responds or host_responds false instead of falling
	back to the reliable_hostname.